# keys-input

./: .gitignore  CMakeLists.txt  Key_Input_Tool  README.txt  key_input_tool_en_US.ts  launcher.sh  main.cpp  mainwindow.cpp  mainwindow.h  run.sh  setup_mac_app.sh
keyPress/: keyPressMac.cpp  keyPressMac.h  keyPressWin.cpp  keyPressWin.h
other/: aboutDialog.cpp  aboutDialog.h
xcode-build/: CMakeCache.txt  cmake_install.cmake
xcode-build/CMakeScripts/: ReRunCMake.make
xcode-build/key_input_tool.xcodeproj/: project.pbxproj
xcode-build/key_input_tool.xcodeproj/project.xcworkspace/xcuserdata/mikeyang.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-build/key_input_tool.xcodeproj/xcuserdata/mikeyang.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode-build/key_input_tool_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp.d
